--- a/literature.bib
+++ b/literature.bib
@@ -125,3 +125,119 @@ doi = {10.1121/1.1984860}
 	year = {2019},
 	pages = {74--83},
 }
+
+@techreport{heutschi_lecture_2016,
+	type = {Lecture {Notes}},
+	title = {Lecture {Notes} on {Acoustics} {I}},
+	language = {en},
+	institution = {Swiss Federal Institute of Technology Zurich},
+	author = {Heutschi, Kurt},
+	year = {2016}
+}
+
+
+@book{bergman_computational_2018,
+	address = {Hoboken, NJ},
+	title = {Computational acoustics: theory and implementation},
+	isbn = {978-1-119-27733-0 978-1-119-27727-9},
+	shorttitle = {Computational acoustics},
+	language = {en},
+	publisher = {John Wiley \& Sons},
+	author = {Bergman, David R.},
+	year = {2018}
+}
+
+@book{kinsler_fundamentals_2000,
+	address = {New York},
+	edition = {4},
+	title = {Fundamentals of acoustics},
+	isbn = {978-0-471-84789-2},
+	language = {en},
+	publisher = {John Wiley \& Sons},
+	author = {Kinsler, Lawrence E. and Frey, Austin R. and Coppens, Alan B. and Sanders, James V.},
+	month = jan,
+	year = {2000}
+}
+
+
+@book{kaltenbacher_computational_2018,
+	address = {Cham},
+	series = {{CISM} {International} {Centre} for {Mechanical} {Sciences}},
+	title = {Computational {Acoustics}},
+	volume = {579},
+	isbn = {978-3-319-59037-0 978-3-319-59038-7},
+	url = {http://link.springer.com/10.1007/978-3-319-59038-7},
+	language = {en},
+	urldate = {2023-01-02},
+	publisher = {Springer International Publishing},
+	editor = {Kaltenbacher, Manfred},
+	year = {2018},
+	doi = {10.1007/978-3-319-59038-7}
+}
+
+
+@techreport{johnson_notes_2010,
+	title = {Notes on {Perfectly} {Matched} {Layers} ({PMLs})},
+	abstract = {This note is intended as a brief introduction to the theory and practice of perfectly matched layer (PML) absorbing boundaries for wave equations, intended for future use in the courses 18.369 and 18.336 at MIT. It focuses on the complex stretched-coordinate viewpoint, and also discusses the limitations of PML.},
+	language = {en},
+	institution = {Massachusetts Institute of Technology},
+	author = {Johnson, Steven G},
+	year = {2010}
+}
+
+@article{kaltenbacher_nonconforming_2018,
+	title = {Nonconforming {Finite} {Elements} {Based} on {Nitsche}-{Type} {Mortaring} for {Inhomogeneous} {Wave} {Equation}},
+	volume = {26},
+	issn = {2591-7285, 2591-7811},
+	url = {https://www.worldscientific.com/doi/abs/10.1142/S2591728518500287},
+	doi = {10.1142/S2591728518500287},
+	language = {en},
+	number = {03},
+	urldate = {2023-01-02},
+	journal = {Journal of Theoretical and Computational Acoustics},
+	author = {Kaltenbacher, Manfred and Floss, Sebastian},
+	month = sep,
+	year = {2018}
+}
+
+
+@book{fahy_foundations_2001,
+	address = {San Diego, Calif. ; London},
+	title = {Foundations of engineering acoustics},
+	isbn = {978-0-12-247665-5},
+	language = {en},
+	publisher = {Academic},
+	author = {Fahy, Frank},
+	year = {2001},
+	keywords = {Acoustical engineering}
+}
+
+
+@book{kaltenbacher_numerical_2007,
+	address = {Berlin/Heidelberg},
+	edition = {2},
+	title = {Numerical {Simulation} of {Mechatronic} {Sensors} and {Actuators}},
+	isbn = {978-3-540-71359-3},
+	language = {en},
+	publisher = {Springer},
+	author = {Kaltenbacher, Manfred},
+	year = {2007}
+}
+
+@book{kreyszig_advanced,
+	author        = "Kreyszig, Erwin",
+	title         = "{Advanced engineering mathematics; 2nd ed.}",
+	publisher     = "Wiley",
+	address       = "New York, NY",
+	year          = "1967",
+	url           = "https://cds.cern.ch/record/601513"
+}
+
+@book{wiley_mathematics_1995,
+	author = {Wylie, C. Ray},
+	year= {1995},
+	publisher = {McGraw-Hill Education},
+	address = "New York, NY",
+	edition = {6th},
+	title = {{Advanced} {Engineering} {Mathematics}}
+}
