--- a/literature.bib
+++ b/literature.bib
@@ -241,3 +241,90 @@ doi = {10.1121/1.1984860}
 	edition = {6th},
 	title = {{Advanced} {Engineering} {Mathematics}}
 }
+
+@article{BERENGER_PML_1994,
+	title = {A perfectly matched layer for the absorption of electromagnetic waves},
+	journal = {Journal of Computational Physics},
+	volume = {114},
+	number = {2},
+	pages = {185-200},
+	year = {1994},
+	issn = {0021-9991},
+	doi = {https://doi.org/10.1006/jcph.1994.1159},
+	url = {https://www.sciencedirect.com/science/article/pii/S0021999184711594},
+	author = {Jean-Pierre Berenger}
+}
+
+@article{KALTENBACHER_PML_2013,
+	title = {A modified and stable version of a perfectly matched layer technique for the 3-d second order wave equation in time domain with an application to aeroacoustics},
+	journal = {Journal of Computational Physics},
+	volume = {235},
+	pages = {407-422},
+	year = {2013},
+	issn = {0021-9991},
+	doi = {https://doi.org/10.1016/j.jcp.2012.10.016},
+	url = {https://www.sciencedirect.com/science/article/pii/S0021999112006055},
+	author = {Barbara Kaltenbacher and Manfred Kaltenbacher and Imbo Sim},
+	keywords = {Finite element method, Perfectly matched layer, Time-domain analysis}
+}
+
+@article{Engquist_ABC_1977,
+	ISSN = {00255718, 10886842},
+	URL = {http://www.jstor.org/stable/2005997},
+	abstract = {In practical calculations, it is often essential to introduce artificial boundaries to limit the area of computation. Here we develop a systematic method for obtaining a hierarchy of local boundary conditions at these artificial boundaries. These boundary conditions not only guarantee stable difference approximations but also minimize the (unphysical) artificial reflections which occur at the boundaries.},
+	author = {Bjorn Engquist and Andrew Majda},
+	journal = {Mathematics of Computation},
+	number = {139},
+	pages = {629--651},
+	publisher = {American Mathematical Society},
+	title = {Absorbing Boundary Conditions for the Numerical Simulation of Waves},
+	urldate = {2023-01-03},
+	volume = {31},
+	year = {1977}
+}
+
+@incollection{nataf_absorbing_2013,
+	address = {Berlin, Boston},
+	title = {Absorbing boundary conditions and perfectly matched layers in wave propagation problems},
+	isbn = {978-3-11-028228-3},
+	url = {https://doi.org/10.1515/9783110282283.219},
+	urldate = {2023-01-03},
+	booktitle = {Direct and {Inverse} {Problems} in {Wave} {Propagation} and {Applications}},
+	publisher = {De Gruyter},
+	author = {Nataf, Frédéric},
+	editor = {Graham, Ivan and Langer, Ulrich and Melenk, Jens and Sini, Mourad},
+	year = {2013},
+	doi = {doi:10.1515/9783110282283.219},
+	pages = {219--232},
+}
+
+@misc{Frquency_weighting,
+	author = {Ono Sokki},
+	title = {What is sound level meter?},
+	howpublished = {\url{https://www.onosokki.co.jp/English/hp_e/whats_new/SV_rpt/SV_7/sv7_5.htm}},
+	note = {Accessed: 2023-01-03}
+}
+
+
+@book{sinambari_ingenieurakustik_2020,
+	address = {Wiesbaden},
+	title = {Ingenieurakustik: {Physikalische} {Grundlagen}, {Anwendungsbeispiele} und Übungen},
+	isbn = {978-3-658-27288-3 978-3-658-27289-0},
+	shorttitle = {Ingenieurakustik},
+	url = {http://link.springer.com/10.1007/978-3-658-27289-0},
+	language = {de},
+	urldate = {2023-01-03},
+	publisher = {Springer Fachmedien Wiesbaden},
+	author = {Sinambari, Gh. Reza and Sentpali, Stefan},
+	year = {2020},
+	doi = {10.1007/978-3-658-27289-0}
+}
+
+@book{peterson_1972_handbook,
+	title={{Handbook of Noise Measurement}},
+	author={Peterson, A.P.G. and Gross, E.E.},
+	lccn={74181574},
+	url={https://books.google.ch/books?id=0QlRAAAAMAAJ},
+	year={1972},
+	publisher={General Radio}
+}
