--- a/Chapter3_Measurement.tex
+++ b/Chapter3_Measurement.tex
@@ -17,36 +17,36 @@ reference box do not influence the measurment result.
 
 The intensity measurements are done using the Brüel \& Kjaer sound intensity probe kit type 3654, which includes a pair of microphones that are placed face
 to face to each other, seperated by a spacer. That is why this method of intensity measurement is also called two-microphone method or $p-p$ method. Instead of
-direct measurement, the particle velocity is obtained by a finite-difference approximation to the pressure gradient. \cite{jocobsen_2005}\cite{moschioni_2008}
+direct measurement, the particle velocity is obtained by a finite-difference approximation to the pressure gradient \cite{jocobsen_2005}\cite{moschioni_2008}.
 
-From the euler equation of motion
+In the following, the basic concept of the sound power measurement using the two-microphone method is shown. From the euler equation of motion
 \begin{equation}
-    \rho_0 \frac{\partial \Vec{u}}{\partial t} = -\nabla p \approx -\frac{p_2 - p_1}{\Delta r}
+    \rho_0 \frac{\partial \boldsymbol{u_a}}{\partial t} = -\nabla p_a \approx -\frac{p_2 - p_1}{\Delta r}\text{,}
 \end{equation}
-where $p_1$ and $p_2$ are the measured pressure of the microphone closer and further from the incident sound wave, respectively and $\Delta r$ the thickness of the spacer.
+with $p_1$ and $p_2$ being the measured pressure of the microphone closer and further from the incident sound wave, respectively and $\Delta r$ being the thickness of the spacer i.e. the distance between the two measurement microphones.
 
-Hence, the particle velocity can be calculated from the two pressures
+Hence, the particle velocity can be expressed from the two pressures as
 \begin{equation}
-    \Vec{u} = \int\frac{(p_1 - p_2)}{\rho \Delta r}\partial t
-\end{equation}
-
-The instantaneous sound intensity is obtained by the product of the approximated particle velocity and mean of the two measured pressures
-\begin{equation}
-    \Vec{I} = p\Vec{u} = \frac{p_1 + p_2}{2} \int\frac{(p_1 - p_2)}{\rho \Delta r}\partial t
+    \boldsymbol{u_a} = \int\frac{(p_1 - p_2)}{\rho_0 \Delta r}\partial t \text{.}
 \end{equation}
 
-Fig. \ref{fig:scanningmethod} shows the intensity measurement using scan method. For the scanning, the intensity probe is moved over the surface with a constant speed and is kept perpendicular to the scanned area so that only the normal component of intensity is captured:
+The instantaneous sound intensity is obtained by the product of the approximated particle velocity and the mean of the measured pressures
 \begin{equation}
-    I_n = \Vec{I} \cdot \Vec{n}
-\end{equation}
-where $\Vec{n}$ is the unit normal vector of the measurement surface. Each partial measurement surface is scanned twice, using vertical and horizotal scan path, respectively. The obtained result is the spatial-averaged intensity. The sound power of a single measurment surface is given by the product of the spatial average intensity and the surface area:
-\begin{equation}
-    W_i = \langle I_{ni}\rangle S_i
+    \boldsymbol{I_a} = p_a\boldsymbol{u_a} = \frac{p_1 + p_2}{2} \int\frac{(p_1 - p_2)}{\rho_0 \Delta r}\partial t
 \end{equation}
 
-The total sound power of the enclosed sound source is given by:
+Fig. \ref{fig:scanningmethod} shows the intensity measurement using scan method. For the scanning, the intensity probe is moved over the surface with a constant speed and is kept perpendicular to the scanned area so that only the normal component of intensity is captured. The normal component of the instantaneous intensity reads as
 \begin{equation}
-    W_{total} = \sum_{i = 1}^{N} W_i
+    I_n = \boldsymbol{I_a} \cdot \boldsymbol{n}\text{,}
+\end{equation}
+where $\boldsymbol{n}$ is the unit normal vector of the measurement surface. Each partial measurement surface is scanned twice, using vertical and horizotal scan path, respectively. The obtained result is the spatial- and time-averaged intensity $\langle I_{n}\rangle$. The sound power of a single measurment surface is then given by the product of the spatial average intensity and the surface area
+\begin{equation}
+    W_i = \langle I_{n\text{,}i}\rangle S_i\text{.}
+\end{equation}
+
+The total sound power of the enclosed sound source is then the sum of the sound power of each measurement surface and reads as
+\begin{equation}
+    W_{total} = \sum_{i = 1}^{N} W_i\text{.}
 \end{equation}
 
 % Beispiel für eine Grafik
@@ -114,7 +114,7 @@ The measurment is post-processed using the Brüel \& Kjaer type 2270 hand-held a
          \label{fig:average_SWL}
      \end{subfigure}
      
-        \caption{Sound power spectra in 1/3-Octave band}
+        \caption{Sound power spectra in 1/3-octave band, SWL in dB ref. $10^{-12}\, \text{W}$}
         \label{fig:SWL}
 \end{figure}
 
