--- a/Titelseite.tex
+++ b/Titelseite.tex
@@ -24,7 +24,7 @@
 		%\textbf{\Huge Prediction Modelling for }
         %\\[0.5cm]
         %\textbf{\Huge Railway Vehicles}
-        \textbf{\Huge Hallo Development and validation of a finite-element model for predicting railway vehicle underfloor noise}
+        \textbf{\Huge Development and validation of a finite-element model for predicting railway vehicle underfloor noise}
 	\end{textblock*}
  \end{spacing}
 
