--- a/Chapter2_Theory.tex
+++ b/Chapter2_Theory.tex
@@ -255,7 +255,7 @@ with $*$ denoting the conjugate complex.
 \newpage
 \subsection{Octave band filters}
 
-The human heari
+The human hearing 
 
 \begin{figure}[H]
 	\centering
