update from overleaf

--- a/Chapter5_Results.tex
+++ b/Chapter5_Results.tex
@@ -191,7 +191,7 @@ In this section, the results obtained by the variation analysis of underfloor ge
 	\label{fig:overall_SPL_geometry}
 \end{figure}
 
-\noindent\Cref{fig:overall_SPL_geometry} shows the distribution of  A-weighted overall sound pressure level at different distances from car body for different geometrical models. The difference between the simulation and the measurement results are plotted in the figures right. As can be seen from the figures, all four models show similar results in the lower area (up to 2 m height), deviation between the models starts to grow with increasing height. Comparing the initial model and the model without air suspension, the model without air suspension shows greater overestimation of the overall SPL than the initial model, at the height of bogie (0.5 m). Up from 1.5 m height, both models show very good agreement with the measurement results and there is almost no difference between both models. One can also see, without including any underfloor components into the model, the overall SPL is overestimated at each measurement location due to a lack of attenuation of the acoustic wave by the underfloor components. The difference between the initial model and the model without underfloor components is about 1 to 1.5 dB depending on the measurement locations. The model with additional underfloor structures shows a similar result as the initial model at 0.5 m height, but in the higher region (up from 1.5 m), the result converges to that of the model without underfloor components.
+\noindent\Cref{fig:overall_SPL_geometry} shows the distribution of  A-weighted overall sound pressure levels at different distances from the car body for different geometrical models. The difference between the simulation and the measurement results are plotted in the right figures. As can be seen from the figures, all four models show similar results in the lower area (up to 2 m height), the deviation between the models starts to grow with increasing height. Comparing the initial model and the model without air suspension, the model without air suspension shows a greater overestimation of the overall SPL than the initial model, at the height of bogie (0.5 m). Up from 1.5 m height, both models show very good agreement with the measurement results and there is almost no difference between both models. One can also see, without including any underfloor components into the model, the overall SPL is overestimated at each measurement location due to a lack of attenuation of the acoustic wave by the underfloor components. The difference between the initial model and the model without underfloor components is about 1 to 1.5 dB depending on the measurement locations. The model with additional underfloor structures shows a similar result as the initial model at 0.5 m height, but in the higher region (up from 1.5 m), the result converges to that of the model without underfloor components.
 
 \begin{figure}[H]
 	\centering
